Updated release scripts.