@@ -1,7 +1,7 @@
 #!/bin/bash
 
-if [ "$#" -ne 3 ]; then
-    echo "Usage: $0 <execution-folder> <eal-file> <output-folder>"
+if [ "$#" -ne 2 ]; then
+    echo "Usage: $0 <execution-folder> <mll-file>"
     exit 1
 fi
 
@@ -13,12 +13,10 @@ PLUGIN_PATHS=`ls -d "${EVOALPATH}/plugins"/* | tr '\n' ':'`
 
 set -x
 java -Dorg.jboss.logging.provider=slf4j\
+     -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=1044\
      --module-path "${EVOALPATH}/modules/:$PLUGIN_PATHS" \
      --add-modules ALL-MODULE-PATH \
      --add-opens java.base/java.lang=guice \
-     --add-exports io.jenetics.base/io.jenetics.internal.collection=de.evoal.core \
-     --add-exports io.jenetics.base/io.jenetics.internal.util=de.evoal.core \
      -m de.evoal.core/de.evoal.core.main.Evoal \
-     "-Bcore:main=heuristic-search" \
-     "-Bcore:ea-configuration-file=$2" \
-     "-Bcore:evaluation-output-folder=$3""
+     -Bcore:main=surrogate-training \
+     "-Bsurrogate:configuration-file=$2"
